--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12"
+  },
+  "dependencies": {
+    "lucide": "^0.542.0"
   }
 }
